# python-lambda-template

./: .gitignore  README.md  pyproject.toml  serverless.yml  test.requirements.txt
.github/workflows/: python-lambda.yml
.github/workflows/scripts/: install-dependencies.sh  lint.sh  package.sh  unit-test.sh
