[tool.poetry]
name = "python-lambda-template"
version = "0.1.0"
description = "AWS Lambda template to use with Python"
authors = ["Paula Grangeiro <contato@paulagrangeiro.com.br>"]
license = "GNU 3.0"
readme = "README.md"
packages = [{include = "python_lambda_template"}]

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
